adds a Use Regenerate option. May want to add a way to signify that Regenerate and Continuation are mutually exclusive

--- a/dropdown.html
+++ b/dropdown.html
@@ -31,6 +31,10 @@
         <label for="idle_use_continuation">Use Continuation</label>
       </div>
       <div class="idle_block flex-container">
+	<input type="checkbox" id="idle_use_regenerate">
+	<label for="idle_use_regenerate">Use Regenerate</label>
+      </div>
+      <div class="idle_block flex-container">
         <input id="idle_random_time" type="checkbox" title="Indicates if the idle time should be randomized between a min/max value." />
         <label for="idle_random_time">Randomize Time</label>
       </div>
