adds a Use Impersonation option.

--- a/dropdown.html
+++ b/dropdown.html
@@ -35,6 +35,10 @@
 	<label for="idle_use_regenerate">Use Regenerate</label>
       </div>
       <div class="idle_block flex-container">
+        <input id="idle_use_impersonation" type="checkbox" title="Indicates whether the idle action will use the 'Impersonate' function." />
+        <label for="idle_use_impersonation">Use Impersonation</label>
+      </div>
+      <div class="idle_block flex-container">
         <input id="idle_random_time" type="checkbox" title="Indicates if the idle time should be randomized between a min/max value." />
         <label for="idle_random_time">Randomize Time</label>
       </div>
