Move styles to css

--- a/dropdown.html
+++ b/dropdown.html
@@ -38,7 +38,7 @@
         <input id="idle_use_impersonation" type="checkbox" title="Indicates whether the idle action will use the 'Impersonate' function." />
         <label for="idle_use_impersonation">Use Impersonation</label>
       </div>
-      <div class="idle_block" style="font-size: 0.8em; font-style: italic; text-align: center; margin-top: -5px; margin-bottom: 5px;">
+      <div class="idle_block mutually_exclusive_warning">
         (Continuation, Regenerate, and Impersonation are mutually exclusive)
       </div>
       <div class="idle_block flex-container">
