--- a/dropdown.html
+++ b/dropdown.html
@@ -14,6 +14,10 @@
         <input id="idle_repeats" class="text_pole widthUnset" type="number" min="0" max="100000" step="1" title="The number of times the idle action will be prompted." />
         <label for="idle_repeats">Idle Prompt Count</label>
       </div>
+      <div class="idle_block flex-container">
+        <input id="idle_limit" class="text_pole widthUnset" type="number" min="0" max="100000" step="1" title="The maximum number of times the idle action will be triggered automatically." />
+        <label for="idle_limit">Maximum auto trigger times</label>
+      </div>
       <div class="idle_block flex-container" style="display: none;">
         <input id="idle_timer_min" class="text_pole widthUnset" type="number" min="0" max="600000" step="1" title="The minimum amount of time in seconds before the idle action is triggered." />
         <label for="idle_timer_min">Idle Timer Minimum (seconds)</label>
